RESOLVED FIXED184398
[JSC] Fix incorrect assertion for VM's regexp buffer lock
https://bugs.webkit.org/show_bug.cgi?id=184398
Summary [JSC] Fix incorrect assertion for VM's regexp buffer lock
Yusuke Suzuki
Reported 2018-04-08 09:06:15 PDT
[JSC] Fix incorrect assertion for VM's regexp buffer lock
Attachments
Patch (1.46 KB, patch)
2018-04-08 09:06 PDT, Yusuke Suzuki
no flags
Yusuke Suzuki
Comment 1 2018-04-08 09:06:55 PDT
Mark Lam
Comment 2 2018-04-08 09:21:05 PDT
Comment on attachment 337458 [details] Patch r=me
WebKit Commit Bot
Comment 3 2018-04-08 09:47:25 PDT
Comment on attachment 337458 [details] Patch Clearing flags on attachment: 337458 Committed r230377: <https://trac.webkit.org/changeset/230377>
WebKit Commit Bot
Comment 4 2018-04-08 09:47:26 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5 2018-04-08 09:48:12 PDT
Darin Adler
Comment 6 2018-04-08 10:30:41 PDT
Comment on attachment 337458 [details] Patch What is the value of this assertion? Why assert something is locked right after calling "lock"?
Yusuke Suzuki
Comment 7 2018-04-08 10:34:38 PDT
(In reply to Darin Adler from comment #6) > Comment on attachment 337458 [details] > Patch > > What is the value of this assertion? Why assert something is locked right > after calling "lock"? This assertion is a corresponding one to the releaseRegExpPatternContexBuffer's assertion. Both would not be required.
Note You need to log in before you can comment on or make changes to this bug.