[JSC] Fix incorrect assertion for VM's regexp buffer lock https://bugs.webkit.org/show_bug.cgi?id=184398

Reviewed by Mark Lam.

isLocked check before taking a lock is incorrect.

* runtime/VM.cpp:
(JSC::VM::acquireRegExpPatternContexBuffer):


Canonical link: https://commits.webkit.org/199951@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@230377 268f45cc-cd09-0410-ab3c-d52691b4dbfc