Source/JavaScriptCore/runtime/VM.cpp
@@ -901,9 +901,8 @@ void logSanitizeStack(VM* vm)
 #if ENABLE(YARR_JIT_ALL_PARENS_EXPRESSIONS)
 char* VM::acquireRegExpPatternContexBuffer()
 {
-    ASSERT(!m_regExpPatternContextLock.isLocked());
-
     m_regExpPatternContextLock.lock();
+    ASSERT(m_regExpPatternContextLock.isLocked());
     if (!m_regExpPatternContexBuffer)
         m_regExpPatternContexBuffer = makeUniqueArray<char>(VM::patternContextBufferSize);
     return m_regExpPatternContexBuffer.get();
